--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-body {
-    background-color: #e2e8dd;
+body,
+html {
+    background-color: #F3F5F1;
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 #head {
     height: 125px;
-    width: 100%;
-    background-color: #95a3a4;
-    color: white;
-    font-family: cursive;
+    color: #434441;
+    font-weight: bold;
+    font-family: 'Oswald', sans-serif;
+
 }
 
 #start {
-    font-size: 20px;
+    font-size: 20px
 }
